<resources>
    <string name="app_name">ETree</string>
    <string name="search">Search</string>
    <string name="etree">Etree.pk</string>
    <string name="plant">Plants</string>
    <string name="tree">Trees</string>
    <string name="bush">Bushes</string>
    <string name="rose">flowers</string>
    <string name="featured_locations">For Donation</string>
    <string name="featured_locations_description">Save World by planting trees </string>
    <string name="description">Save World by planting trees </string>
    <string name="most_view">Most Viewed</string>
    <string name="view_all">View all</string>
    <string name="categories">Categories</string>
    <string name="Specialoffers">Special Offers</string>
    <string name="menu">Menu</string>

    <string name="tree1">Sycamore Tree</string>
    <string name="tree2">Oak Tree</string>
    <string name="tree3">Silver Maple Tree</string>
    <string name="tree4">Tulip Poplar Tree</string>
    <string name="tree5">Willow Oak Tree</string>
    <string name="tree6">Sugar Maple Tree</string>
    <string name="tree7">Sassafras Tree</string>

    <string name="confirmactivity">Confirm Activity</string>

    <string name="bush1">Arrowhead plant</string>
    <string name="bush2">Bridal wreath spiraea</string>
    <string name="bush3">Burning Bush </string>
    <string name="bush4">Perennial </string>
    <string name="bush5">Daffodil</string>
    <string name="bush6">Perennial Foam</string>
    <string name="bush7">Shasta Daisy</string>
    <string name="bush8">Periwinkle Plants</string>


    <string name="all_categories">All Categories</string>
    <string name="home">Home</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="contact">Contact</string>
    <string name="donation">Donation</string>
    <string name="profile">Profile</string>
    <string name="share">Profile</string>
    <string name="rateus">Profile</string>
    <string name="the_sycamore_tree_is_one_of_the_oldest_trees_on_earth">The Sycamore tree is one of the oldest trees on earth</string>

</resources>