<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".UserDashboard">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/home"
        android:theme="@style/navigationTheme"
        app:headerLayout="@layout/main_header"

        app:menu="@menu/main_menu" />




    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:id="@+id/bottomnavigation"
        android:layout_height="10dp"
        android:layout_marginTop="685dp"
        android:background="@color/home"
        app:menu="@menu/bottom_nav_menu"/>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/home"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <ImageView
                android:id="@+id/menu_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:contentDescription="@string/menu"
                android:src="@drawable/menu"
                tools:ignore="HardcodedText" />

            <ImageView

                android:layout_width="400dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:contentDescription="@string/menu"
                android:src="@drawable/logo"
                tools:ignore="HardcodedText" />


            <ImageView
                android:id="@+id/cartttttt"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:src="@drawable/cart" />


        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:fontFamily="@font/belgrano"
                            android:text="@string/most_view"
                            android:textAllCaps="true"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="15dp"
                            android:text="@string/view_all" />


                    </RelativeLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/most_viewed_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="100dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingTop="0dp"
                    android:paddingBottom="20dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:fontFamily="@font/belgrano"
                            android:text="@string/Specialoffers"
                            android:textAllCaps="true"
                            android:textColor="@color/black"
                            android:textSize="15sp" />




                    </RelativeLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/categories_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="60dp" />

                </LinearLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/home">

                    <LinearLayout
                        android:id="@+id/featured_background"
                        android:layout_width="150dp"
                        android:layout_height="190dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="5dp"
                        android:background="@color/whitee"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="50dp"
                            android:fontFamily="@font/belgrano"
                            android:lineHeight="24sp"
                            android:text="@string/featured_locations"
                            android:textAllCaps="true"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="@string/featured_locations_description" />

                        <Button
                            android:id="@+id/donation_button"
                            android:layout_width="117dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/round_btn"


                            android:fadingEdge="horizontal"
                            android:text="Donate Now " />

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/featured_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_toRightOf="@id/featured_background"
                        android:background="@color/home" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="@font/belgrano"
                        android:text="@string/categories"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/categories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        android:text="@string/view_all" />


                </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="74dp"
                    android:layout_gravity="center">


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <RelativeLayout

                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_margin="10dp"
                            android:background="@drawable/car_2"
                            android:elevation="8dp">

                            <ImageButton
                                android:id="@+id/tree"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"

                                android:layout_centerInParent="true"
                                android:src="@drawable/tree2" />

                        </RelativeLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_margin="10dp"
                            android:background="@drawable/car_2"
                            android:elevation="8dp">

                            <ImageButton
                                android:id="@+id/plants"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_centerInParent="true"
                                android:src="@drawable/plant" />

                        </RelativeLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout

                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_margin="10dp"
                            android:background="@drawable/car_2"
                            android:elevation="8dp">

                            <ImageButton
                                android:id="@+id/bushe"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_centerInParent="true"
                                android:src="@drawable/bush222" />

                        </RelativeLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_margin="10dp"
                            android:background="@drawable/car_2"
                            android:elevation="8dp">

                            <ImageButton
                                android:id="@+id/flower"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_centerInParent="true"
                                android:src="@drawable/rose2" />

                        </RelativeLayout>


                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:fontFamily="@font/belgrano"
                            android:text="On Sale"
                            android:textAllCaps="true"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/view1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="15dp"
                            android:text="@string/view_all" />


                    </RelativeLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/most_viewed_recyclerr"
                        android:layout_width="match_parent"
                        android:layout_height="100dp" />

                </LinearLayout>


            </LinearLayout>


        </ScrollView>

    </LinearLayout>


</androidx.drawerlayout.widget.DrawerLayout>