<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_white"
    tools:context=".AllCategories">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <ImageView
                android:id="@+id/back_pressed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:src="@drawable/back" />

            <ImageView
                android:id="@+id/cartttttt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:src="@drawable/cart" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baumans"
            android:padding="10dp"
            android:text="Categories"
            android:textAllCaps="true"
            android:textSize="30sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="15dp"
            android:background="@drawable/card_3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/belgrano"
                android:padding="30dp"
                android:text="@string/tree"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <Button
                android:id="@+id/tree2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:fontFamily="@font/aclonica"
                android:padding="20dp"

                android:textColor="@color/black"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="183dp"
                android:layout_marginLeft="183dp"
                android:layout_marginTop="-40dp"
                android:layout_marginRight="-1dp"
                android:layout_marginBottom="3dp"
                android:src="@drawable/tree21" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="15dp"
            android:background="@drawable/car_2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/belgrano"
                android:padding="30dp"
                android:text="@string/plant"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <Button
                android:id="@+id/plants2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:fontFamily="@font/aclonica"
                android:padding="20dp"

                android:textColor="@color/black"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="183dp"
                android:layout_marginLeft="183dp"
                android:layout_marginTop="-40dp"
                android:layout_marginRight="-1dp"
                android:layout_marginBottom="-5dp"

                android:src="@drawable/plant21" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="15dp"
            android:background="@drawable/card_1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/belgrano"
                android:padding="30dp"
                android:text="@string/bush"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <Button
                android:id="@+id/bushe2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:fontFamily="@font/aclonica"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="183dp"
                android:layout_marginLeft="183dp"
                android:layout_marginTop="-40dp"
                android:layout_marginRight="-1dp"
                android:layout_marginBottom="-10dp"

                android:src="@drawable/bush21" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:background="@drawable/card_4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/belgrano"
                android:padding="30dp"
                android:text="Flower"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <Button
                android:id="@+id/flower2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:fontFamily="@font/aclonica"
                android:padding="20dp"

                android:textColor="@color/black"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="183dp"
                android:layout_marginLeft="183dp"
                android:layout_marginTop="-40dp"
                android:layout_marginRight="-1dp"
                android:src="@drawable/rose1" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="15dp"
            android:background="@drawable/card_3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/belgrano"
                android:padding="30dp"
                android:text="@string/tree"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <Button
                android:id="@+id/tree2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:fontFamily="@font/aclonica"
                android:padding="20dp"

                android:textColor="@color/black"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="183dp"
                android:layout_marginLeft="183dp"
                android:layout_marginTop="-40dp"
                android:layout_marginRight="-1dp"
                android:layout_marginBottom="3dp"
                android:src="@drawable/tree21" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="15dp"
            android:background="@drawable/car_2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/belgrano"
                android:padding="30dp"
                android:text="@string/plant"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <Button
                android:id="@+id/plants2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:fontFamily="@font/aclonica"
                android:padding="20dp"

                android:textColor="@color/black"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="183dp"
                android:layout_marginLeft="183dp"
                android:layout_marginTop="-40dp"
                android:layout_marginRight="-1dp"
                android:layout_marginBottom="-5dp"

                android:src="@drawable/plant21" />

        </RelativeLayout>
    </LinearLayout>

</ScrollView>